Version 0.1.1 - 2009-02-22
* Fixed mathplot.cpp:654, where were a missing "orgy ="
* Commented out line mathplot.cpp:848: wxCoord startPx = m_drawOutsideMargins ? 0 : w.GetMarginLeft(); it was a useless variable.
* Added WXUNUSED macro to those events which remains unused (makes build more clear).
* Introduced CMakeLists.txt the choice to create a shared or static library


Version 0.1.0 - 2008-11-06
* Layer are divided by type using mpLayerType
* Legend implemented
* Mouse coordinate box layer
* New class mpInfoLayer to add overlay boxes functionalities
* mpWindow::SaveScreenshot allows saving plot screenshot in BMP, PNG and JPEG formats
* Fixed assert on wxPaintDC during debug under Windows
* Introduced margins on mpWindow: you can now scale everything down into a subarea of the window, by defining 4 window margins (top, right, bottom, left). This is done to let the layer plot outside of axis labels, that is more readable. mpLayer has now a boolean attribute to decide whether to draw or not outside the margins. All default layers were adapted to this behaviuor, but mpMovableObject and mpBitmapLayer always draw outside margins.
* Fixed rectangular zoom: in some cases the selection rectangle were drawn in the opposite direction of the mouse cursor movement.
* Commented out useless GetClientSize in mpWindow::OnMouseWheel and mpWindow::UpdateAll
* Complete revision of axis drawing. Many behaviour vere fixed. Now grid can be limited only in the are inside the margin, making the axes more readable and more "professional-looking". If margins are sufficient, the axis title is drawn outside the ases labels, and for Y axis, its is drawn vertically
* X axis can now be set to be a time axis, displaying values in the hours:minutes:seconds.milliseconds format.
* Build system completely revised: now CMake is used to generate project files for every platform
* BUG FIXED: mpFXYVector didn't draw the last point in the vector.