@@ -60,6 +60,28 @@ if(wxWidgets_FOUND)
     IF(WXMATHPLOT_BUILD_EXAMPLES)
         add_subdirectory(samples)
     ENDIF(WXMATHPLOT_BUILD_EXAMPLES)
+	
+	# library installation
+    if(UNIX)
+        if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
+            set(LIBRARY_APPEND_PATH lib64)
+        else(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
+            set(LIBRARY_APPEND_PATH lib)
+        endif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
+		install(TARGETS mathplot
+            RUNTIME DESTINATION bin
+            LIBRARY DESTINATION ${LIBRARY_APPEND_PATH}
+            ARCHIVE DESTINATION ${LIBRARY_APPEND_PATH}
+        )
+        set(WXMATHPLOT_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/share/wxMathPlot/)
+        install(FILES Doxyfile DESTINATION ${WXMATHPLOT_INSTALL_DIR}/)
+		install(FILES mathplot.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/)
+		install(FILES samples/sample1/mp1.cpp samples/sample1/CMakeLists.txt DESTINATION ${WXMATHPLOT_INSTALL_DIR}/samples/sample1)
+		install(FILES samples/sample2/mp2.cpp samples/sample2/CMakeLists.txt DESTINATION ${WXMATHPLOT_INSTALL_DIR}/samples/sample2)
+		install(FILES samples/sample3/sample3.cpp samples/sample3/CMakeLists.txt samples/sample3/gridmap.png DESTINATION ${WXMATHPLOT_INSTALL_DIR}/samples/sample3)
+    else(UNIX)
+    endif(UNIX)
+
 else(wxWidgets_FOUND)
     MESSAGE("wxWidgets not found!")
 endif(wxWidgets_FOUND)
